# domain-adaptation-benchmark

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/data/: index.md
docs/datasets/: index.md
docs/results/: index.md  integration.md  schema.md
docs/setting/: index.md
docs/suite/: index.md
docs/task/: index.md
docs/zh/: index.md
docs/zh/data/: index.md
docs/zh/datasets/: index.md
docs/zh/results/: index.md  integration.md  schema.md
docs/zh/setting/: index.md
docs/zh/suite/: index.md
docs/zh/task/: index.md
manifests/: iwildcam_hf_sizes.tsv
scripts/: dg_domainnet.py  download_domainnet.py  download_iwildcam.sh  extract_damp_uda_results.py  generate_dataset_overview.py  uda_domainnet.py
scripts/manu-test/: suite.py
src/dabench/: __init__.py  cli.py  io.py
src/dabench/config/: __init__.py  paths.json
src/dabench/data/: __init__.py  base.py  common.py  dataset.py  loader.py  minidomainnet.py  transforms.py  unida.py
src/dabench/datasets/: __init__.py  common.py  hf_download.py  modelscope_download.py  transforms.py  url_download.py
src/dabench/manifests/: camelyon17.yaml  domainnet.yaml  iwildcam.yaml  minidomainnet.yaml  office-31.yaml  office-home.yaml  visda-2017.yaml
src/dabench/results/: __init__.py  _common.py  recorder.py  run.py  uda.py
src/dabench/setting/: __init__.py  dg.py  uda.py  unida.py
src/dabench/storage/: __init__.py  manifest.py  paths.py  prepare.py
src/dabench/suite/: __init__.py  _common.py  domainnet.py  minidomainnet.py  office31.py  (+3 more)
(+164 files in other folders)
